# TinyChat

./: .gitignore  AGENT.md  AGENTS.md  README.org
Backend/: .clang-format  CMakeLists.txt  config.ini
Backend/TestCases/: CMakeLists.txt  DownloadClient.cpp  UploadClient.cpp  test.cpp  test_AiChatClient.cpp  test_FileClient.cpp  test_db.cpp  test_upload_resume_offset.cpp
Backend/TestCases/Pic/: UploadClient.cpp  test.cpp
Backend/docs/plans/: 2026-02-06-file-resume-upload-design.md
Backend/include/: AsioIOServicePool.h  CServer.h  ConfigManager.h  HttpConnection.h  LogManager.h  LogicSystem.h  RedisConPool.h  RedisManager.h  VarifyGrpcClient.h  const.h
Backend/proto/: CMakeLists.txt  ai.proto  demo.proto  file.proto  message.proto
Backend/servers/: CMakeLists.txt
Backend/servers/AiServer/: AiServiceImpl.cpp  AiServiceImpl.h  AstrBotClient.cpp  AstrBotClient.h  CMakeLists.txt  VaneClient.cpp  VaneClient.h  main.cpp
Backend/servers/ChatServer/: CMakeLists.txt  ChatServer.cpp  ChatServer.h  ChatServiceImpl.cpp  ChatServiceImpl.h  LogicHandler.cpp  LogicHandler.h  MessagePersistenceService.cpp  MessagePersistenceService.h  Messsage.h  SessionManager.cpp  SessionManager.h  UserManager.cpp  UserManager.h  dispatcher.cpp  dispatcher.h  main.cpp  session.cpp  session.h
Backend/servers/FileServer/: BackPressureManager.cpp  BackPressureManager.h  CMakeLists.txt  CallData.h  DownloadCallData.cpp  DownloadCallData.h  FileIndexManager.cpp  FileIndexManager.h  FileServer.cpp  FileServer.h  FileTransportServiceImpl.cpp  FileTransportServiceImpl.h  FileWorker.cpp  FileWorker.h  FileWorkerPool.cpp  FileWorkerPool.h  QueryDownloadCallData.cpp  QueryDownloadCallData.h  QueryUploadCallData.cpp  QueryUploadCallData.h  TaskQueue.h  UploadCallData.cpp  UploadCallData.h  const.h  main.cpp
Backend/servers/GateServer/: CMakeLists.txt  GateServer.cpp  main.cpp
Backend/servers/StatusServer/: CMakeLists.txt  StatusServer.cpp  StatusServiceImpl.cpp  StatusServiceImpl.h
Backend/servers/VarifyServer/: config.js  config.json  const.js  email.js  package-lock.json  package.json  passwd  proto.js  redis.js  server.js
Backend/src/: AsioIOServicePool.cpp  CMakeLists.txt  CServer.cpp  ConfigManager.cpp  HttpConnection.cpp  LogManager.cpp  LogicSystem.cpp  RedisManager.cpp
Backend/src/common/: ChatServerInfo.h  UserMessage.h  const.h  result.h  singleton.h
Backend/src/controller/: AuthController.cpp  AuthController.h  OnlyOfficeController.cpp  OnlyOfficeController.h  TestController.cpp  TestController.h  UserController.cpp  UserController.h
Backend/src/core/: CServer.cpp  CServer.h  HttpConnection.cpp  HttpConnection.h  HttpResponse.cpp  HttpResponse.h  LogicSystem.cpp  LogicSystem.h  Router.cpp  Router.h
Backend/src/dao/: MsgDAO.h  MySqlDAO.h  UserDAO.h
Backend/src/grpc/: VarifyGrpcClient.h
Backend/src/grpcClient/: AiChatClient.cpp  AiChatClient.h  ChatClient.cpp  ChatClient.h  FileClient.cpp  FileClient.h  StatusClient.cpp  StatusClient.h  VarifyClient.h
Backend/src/infra/: AsioIOServicePool.cpp  AsioIOServicePool.h  ChannelPool.h  ConfigManager.h  Defer.h  DistLock.h  LogManager.cpp  LogManager.h  MySqlPool.h  RPConPool.cpp  RPConPool.h  RedisConPool.h  RedisManager.cpp  RedisManager.h  StubFactory.h
Backend/src/repository/: ChatServerRepository.cpp  ChatServerRepository.h  FileRepository.cpp  FileRepository.h  MessagePersistenceRepository.cpp  MessagePersistenceRepository.h  UserRepository.cpp  UserRepository.h
Backend/src/service/: UserService.cpp  UserService.h
QTClient/: QTClient.pro  adduseritem.h  animationtiming.h  applyfriend.cpp  applyfriend.ui  applyfrienditem.cpp  applyfrienditem.h  applyfrienditem.ui  applyfriendpage.cpp  applyfriendpage.h  applyfriendpage.ui  authenfriend.cpp  authenfriend.ui  avatarcache.cpp  avatarcache.h  botplatformsettings.cpp  botplatformsettings.h  botuser.cpp  botuser.h  bubbleframe.cpp  bubbleframe.h  chat_time.cpp  chat_time.h  chatdialog.cpp  chatdialog.h  chatdialog.ui  chatitembase.cpp  chatitembase.h  chatpage.cpp  chatpage.h  chatpage.ui  chatuserlist.cpp  chatuserlist.h  chatuserwidget.cpp  chatuserwidget.h  chatuserwidget.ui  chatview.cpp  clickedbtn.h  clickedlabel.cpp  clickedlabel.h  (+90 more)
QTClient/style/: stylesheet.qss
QTClient/test/: QTClient  compile_commands.json  docpayload.pro  moc_predefs.h  test.pro  tst_docpayload.cpp  tst_messagecache.cpp  tst_messagesyncprotocol.cpp
QTClient/test/.cache/clangd/index/: moc_adduseritem.cpp.4F666A2E44B5A10F.idx  moc_applyfriend.cpp.34C25DC4FAF4050A.idx  moc_applyfrienditem.cpp.F8BCF406132B454B.idx  moc_applyfriendlist.cpp.37471544072DF6D9.idx  moc_applyfriendpage.cpp.F6581373A7829A60.idx  moc_authenfriend.cpp.E16C7E2AF5581BB1.idx  moc_bubbleframe.cpp.AEF530A3C9470A2E.idx  moc_chatdialog.cpp.4CD41B3679C896A3.idx  moc_chatitembase.cpp.F66471B07F2814D8.idx  moc_chatpage.cpp.E68B44E8BEAB03EC.idx  moc_chatuserlist.cpp.C4ED60D748DA8E22.idx  moc_chatuserwidget.cpp.7FE52DBF06EAB449.idx  moc_chatview.cpp.C43D73B27E9DF354.idx  moc_clickedbtn.cpp.B869189CE1E4E159.idx  moc_clickedlabel.cpp.4F3071E885F50029.idx  moc_clickedoncelabel.cpp.46F2B4776E4336D2.idx  moc_contactuseritem.cpp.2EE5F0051A461C00.idx  moc_contactuserlist.cpp.98A213B18D9370CD.idx  moc_customedit.cpp.3565DCE4515B3DA6.idx  moc_fileuploadwindow.cpp.87A041C296A59547.idx  moc_findfaildlg.cpp.D0EF80450AE50661.idx  moc_findsuccessdialog.cpp.71058D3CE18ADA5B.idx  moc_friendinfopage.cpp.8E10623FAD3D22C8.idx  moc_friendlabel.cpp.FE52236E8DEBD016.idx  moc_grouptipitem.cpp.846801C4E74B6ACC.idx  moc_httpmanager.cpp.C488CE8121D049C7.idx  moc_imagecropperdialog.cpp.CF0DBE171270562C.idx  moc_imagecropperlabel.cpp.D8CFFAB81D2EACDA.idx  moc_listitembase.cpp.82B1FFB6BAB389A4.idx  moc_loadingdialog.cpp.2974D2C3C3A42514.idx  moc_login.cpp.E1F0EDA4044EB829.idx  moc_mainwindow.cpp.C6C40052DF5A1578.idx  moc_messagetextedit.cpp.E0A8242E734C1632.idx  moc_picturebubble.cpp.6739F6C42E95EE01.idx  moc_register.cpp.4403CE11D9D765A8.idx  (+8 more)
docs/plans/: 2026-02-23-login-recent-messages.md  2026-03-04-sqlite-message-cache.md  2026-03-12-onlyoffice-doc-bubble.md
